Feat: 홈화면 사이드바 구현

--- a/html/login.html
+++ b/html/login.html
@@ -13,10 +13,10 @@
     <div class="login-container">
         <div class="login-box">
             <div class="title">Gitcha</div>
-            <div class="login-button">
+            <a href="#" class="login-button">
                 <img class="white_cat" src="../images/icon(white).png" alt="white cat">
                 <span>Github로 로그인</span>
-            </div>
+            </a>
         </div>
 
     </div>
