Feat: 홈화면 사이드바 구현2

--- a/html/home.html
+++ b/html/home.html
@@ -11,18 +11,22 @@
 <body>
     <aside>
         <div class="side-container">
-            <img class="logo-img" src="../images/Logo.png" alt="Logo">
-            <div class="button-container">
-                <a href="#" class="side-button">홈</a>
-                <a href="#" class="side-button">순위표</a>
-                <a href="#" class="side-button">가챠</a>
+            <div class="top-side-container">
+                <img class="logo-img" src="../images/Logo.png" alt="Logo">
+                <div class="button-container">
+                    <a href="#" class="side-button">홈</a>
+                    <a href="#" class="side-button">순위표</a>
+                    <a href="#" class="side-button">가챠</a>
+                </div>
             </div>
-            <div class="gits-wallet"></div>
+            <div class="bottom-side-container">
+                <div class="gits-wallet">gits: 0</div>
+            </div>
         </div>
 
     </aside>
     <main>
-
+        <div></div>
     </main>
 </body>
 
