--- a/html/home.html
+++ b/html/home.html
@@ -14,9 +14,11 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="#" class="side-button">홈</a>
+                    <a href="#" class="side-button act">홈</a>
+                    <a href="#" class="side-button">미션</a>
                     <a href="#" class="side-button">순위표</a>
                     <a href="#" class="side-button">가챠</a>
+                    <a href="#" class="side-button">프로필</a>
                 </div>
             </div>
             <div class="bottom-side-container">
