--- a/html/login.html
+++ b/html/login.html
@@ -13,7 +13,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="title">Gitcha</div>
-            <a href="#" class="login-button">
+            <a href="http://localhost:8080/oauth2/authorization/github" class="login-button">
                 <img class="white_cat" src="../images/icon(white).png" alt="white cat">
                 <span>Github로 로그인</span>
             </a>
