--- a/html/mission.html
+++ b/html/mission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitcha</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/mission.css">
     <link rel="icon" type="images/png" href="../images/Logo.png">
 </head>
 
@@ -15,23 +15,21 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="#" class="side-button act">홈</a>
-                    <a href="#" class="side-button noact">미션</a>
+                    <a href="#" class="side-button noact">홈</a>
+                    <a href="#" class="side-button act">미션</a>
                     <a href="#" class="side-button noact">순위표</a>
                     <a href="#" class="side-button noact">가챠</a>
                     <a href="#" class="side-button noact">프로필</a>
                 </div>
             </div>
             <div class="bottom-side-container">
-                <span class="gits-wallet">gits: 0</span>
+                <div class="gits-wallet">gits: 0</div>
             </div>
         </div>
 
     </aside>
     <main>
-        <div>
-
-        </div>
+        <div></div>
     </main>
 </body>
 
