feat: 사이드바 아이콘 삽입

--- a/html/mission.html
+++ b/html/mission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitcha</title>
-    <link rel="stylesheet" href="../css/mission.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="icon" type="images/png" href="../images/Logo.png">
 </head>
 
@@ -15,21 +15,34 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="#" class="side-button noact">홈</a>
-                    <a href="#" class="side-button act">미션</a>
-                    <a href="#" class="side-button noact">순위표</a>
-                    <a href="#" class="side-button noact">가챠</a>
-                    <a href="#" class="side-button noact">프로필</a>
+                    <a href="#" class="side-button noact">
+                        <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
+                        <span>홈</span>
+                    </a>
+                    <a href="#" class="side-button act">
+                        <img class="rankIcon" src="../images/RankIcon.png" alt="홈 아이콘">
+                        <span>순위표</span>
+                    </a>
+                    <a href="#" class="side-button noact">
+                        <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
+                        <span>가챠</span>
+                    </a>
+                    <a href="#" class="side-button noact">
+                        <img class="profileIcon" src="../images/ProfileIcon.png" alt="홈 아이콘">
+                        <span>프로필</span>
+                    </a>
                 </div>
             </div>
             <div class="bottom-side-container">
-                <div class="gits-wallet">gits: 0</div>
+                <span class="gits-wallet">gits: 0</span>
             </div>
         </div>
 
     </aside>
     <main>
-        <div></div>
+        <div>
+
+        </div>
     </main>
 </body>
 
