--- a/html/home.html
+++ b/html/home.html
@@ -15,11 +15,22 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="#" class="side-button act">홈</a>
-                    <a href="#" class="side-button noact">미션</a>
-                    <a href="#" class="side-button noact">순위표</a>
-                    <a href="#" class="side-button noact">가챠</a>
-                    <a href="#" class="side-button noact">프로필</a>
+                    <a href="#" class="side-button act">
+                        <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
+                        <span>홈</span>
+                    </a>
+                    <a href="#" class="side-button noact">
+                        <img class="rankIcon" src="../images/RankIcon.png" alt="홈 아이콘">
+                        <span>순위표</span>
+                    </a>
+                    <a href="#" class="side-button noact">
+                        <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
+                        <span>가챠</span>
+                    </a>
+                    <a href="#" class="side-button noact">
+                        <img class="profileIcon" src="../images/ProfileIcon.png" alt="홈 아이콘">
+                        <span>프로필</span>
+                    </a>
                 </div>
             </div>
             <div class="bottom-side-container">
