--- a/html/dice.html
+++ b/html/dice.html
@@ -15,7 +15,7 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="./home.html" class="side-button act">
+                    <a href="./home.html" class="side-button noact">
                         <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
                         <span>홈</span>
                     </a>
@@ -23,7 +23,7 @@
                         <img class="rankIcon" src="../images/RankIcon.png" alt="홈 아이콘">
                         <span>순위표</span>
                     </a>
-                    <a href="./dice.html" class="side-button noact">
+                    <a href="./dice.html" class="side-button act">
                         <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
                         <span>가챠</span>
                     </a>
