--- a/html/mission.html
+++ b/html/mission.html
@@ -15,19 +15,19 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="#" class="side-button noact">
+                    <a href="./home.html" class="side-button noact">
                         <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
                         <span>홈</span>
                     </a>
-                    <a href="#" class="side-button act">
+                    <a href="./mission.html" class="side-button act">
                         <img class="rankIcon" src="../images/RankIcon.png" alt="홈 아이콘">
                         <span>순위표</span>
                     </a>
-                    <a href="#" class="side-button noact">
+                    <a href="./dice.html" class="side-button noact">
                         <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
                         <span>가챠</span>
                     </a>
-                    <a href="#" class="side-button noact">
+                    <a href="./profile.html" class="side-button noact">
                         <img class="profileIcon" src="../images/ProfileIcon.png" alt="홈 아이콘">
                         <span>프로필</span>
                     </a>
