--- a/html/profile.html
+++ b/html/profile.html
@@ -15,7 +15,7 @@
             <div class="top-side-container">
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
-                    <a href="./home.html" class="side-button act">
+                    <a href="./home.html" class="side-button noact">
                         <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
                         <span>홈</span>
                     </a>
@@ -27,7 +27,7 @@
                         <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
                         <span>가챠</span>
                     </a>
-                    <a href="./profile.html" class="side-button noact">
+                    <a href="./profile.html" class="side-button act">
                         <img class="profileIcon" src="../images/ProfileIcon.png" alt="홈 아이콘">
                         <span>프로필</span>
                     </a>
