--- a/html/mission.html
+++ b/html/mission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitcha</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/mission.css">
     <link rel="icon" type="images/png" href="../images/Logo.png">
 </head>
 
@@ -16,19 +16,19 @@
                 <img class="logo-img" src="../images/Logo.png" alt="Logo">
                 <div class="button-container">
                     <a href="./home.html" class="side-button noact">
-                        <img class="homeIcon" src="../images/HomeIcon.png" alt="홈 아이콘">
+                        <img class="icon" src="../images/HomeIcon.png" alt="홈 아이콘">
                         <span>홈</span>
                     </a>
                     <a href="./mission.html" class="side-button act">
-                        <img class="rankIcon" src="../images/RankIcon.png" alt="홈 아이콘">
+                        <img class="icon" src="../images/RankIcon.png" alt="홈 아이콘">
                         <span>순위표</span>
                     </a>
-                    <a href="./dice.html" class="side-button noact">
-                        <img class="diceIcon" src="../images/DiceIcon.png" alt="홈 아이콘">
+                    <a href="./gacha.html" class="side-button noact">
+                        <img class="icon" src="../images/DiceIcon.png" alt="홈 아이콘">
                         <span>가챠</span>
                     </a>
                     <a href="./profile.html" class="side-button noact">
-                        <img class="profileIcon" src="../images/ProfileIcon.png" alt="홈 아이콘">
+                        <img class="icon" src="../images/ProfileIcon.png" alt="홈 아이콘">
                         <span>프로필</span>
                     </a>
                 </div>
