feat: 메인 컨테이너 임시 완료

--- a/html/home.html
+++ b/html/home.html
@@ -40,8 +40,8 @@
 
     </aside>
     <main>
-        <div>
-
+        <div class="main-container">
+            <div class="main-box"></div>
         </div>
     </main>
 </body>
