--- a/html/profile.html
+++ b/html/profile.html
@@ -40,8 +40,8 @@
 
     </aside>
     <main>
-        <div>
-
+        <div class="main-container">
+            <div class="main-box"></div>
         </div>
     </main>
 </body>
