feat: 홈 화면 메인 컨테이너 임시 구성

--- a/html/home.html
+++ b/html/home.html
@@ -41,7 +41,11 @@
     </aside>
     <main>
         <div class="main-container">
-            <div class="main-box"></div>
+            <div class="main-box">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </main>
 </body>
