feat: 프로필 임시 컨테이너 구성

--- a/html/profile.html
+++ b/html/profile.html
@@ -41,7 +41,16 @@
     </aside>
     <main>
         <div class="main-container">
-            <div class="main-box"></div>
+            <div class="main-box">
+                <div class="top-box">
+                    <div class="profile-text">프로필</div>
+                </div>
+                <div class="middle-box"></div>
+                <div class="bottom-box">
+
+                </div>
+            </div>
+        </div>
         </div>
     </main>
 </body>
