feat: 프로필 전체적인 구성

--- a/html/profile.html
+++ b/html/profile.html
@@ -45,7 +45,15 @@
                 <div class="top-box">
                     <div class="profile-text">프로필</div>
                 </div>
-                <div class="middle-box"></div>
+                <div class="middle-box">
+                    <div class="middle-box-left">
+                        <div class="profile-picture"></div>
+                    </div>
+                    <div class="middle-box-right">
+                        <div class="middle-box-right-top"></div>
+                        <div class="middle-box=right-bottom"></div>
+                    </div>
+                </div>
                 <div class="bottom-box">
 
                 </div>
