feat: middle-box 전체적인 구성

--- a/html/profile.html
+++ b/html/profile.html
@@ -50,8 +50,20 @@
                         <div class="profile-picture"></div>
                     </div>
                     <div class="middle-box-right">
-                        <div class="middle-box-right-top"></div>
-                        <div class="middle-box=right-bottom"></div>
+                        <div class="middle-box-right-top">
+                            <div class="github-container">
+                                <div class="github-name">Username</div>
+                                <a href="#" class="github-url">github.com/team-whitelabel</a>
+                            </div>
+                        </div>
+                        <div class="middle-box-right-bottom">
+                            <div class="middle-box-right-bottom-top">
+                                <img class="edit-icon" src="/images/EditIcon.png" alt="편집 아이콘">
+                            </div>
+                            <div class="middle-box-right-bottom-bottom">
+                                <textarea class="description" placeholder=""></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="bottom-box">
