feat: 프로필 middle-box 크기 및 위치 다듬기

--- a/html/profile.html
+++ b/html/profile.html
@@ -61,7 +61,7 @@
                                 <img class="edit-icon" src="/images/EditIcon.png" alt="편집 아이콘">
                             </div>
                             <div class="middle-box-right-bottom-bottom">
-                                <textarea class="description" placeholder="소개글을 입력해주세요."></textarea>
+                                <textarea class="description" placeholder="소개글을 입력해주세요." readonly></textarea>
                             </div>
                         </div>
                     </div>
