feat: bottom-box-top 부분 완성

--- a/html/profile.html
+++ b/html/profile.html
@@ -67,7 +67,28 @@
                     </div>
                 </div>
                 <div class="bottom-box">
+                    <div class="bottom-box-top">
+                        <div class="gits-point white">
+                            <div class="point-text">Gits</div>
+                            <div class="point-box">0</div>
+                        </div>
+                        <div class="gits-point-right">
+                            <div class="gits-point fst">
+                                <div class="point-text">전체</div>
+                                <div class="point-box">0</div>
+                            </div>
+                            <div class="gits-point scd">
+                                <div class="point-text">올해</div>
+                                <div class="point-box">0</div>
+                            </div>
+                            <div class="gits-point trd">
+                                <div class="point-text">전체</div>
+                                <div class="point-box">0</div>
+                            </div>
+                        </div>
 
+                    </div>
+                    <div class="bottom-box-bottom"></div>
                 </div>
             </div>
         </div>
