--- a/html/profile.html
+++ b/html/profile.html
@@ -88,7 +88,11 @@
                         </div>
 
                     </div>
-                    <div class="bottom-box-bottom"></div>
+                    <div class="bottom-box-bottom">
+                        <div class="commit-img-container">
+                            <div class="commit-img"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
