feat: 프로필 사진 들어갈 부분 수정

--- a/html/profile.html
+++ b/html/profile.html
@@ -58,7 +58,10 @@
                         </div>
                         <div class="middle-box-right-bottom">
                             <div class="middle-box-right-bottom-top">
-                                <img class="edit-icon" src="/images/EditIcon.png" alt="편집 아이콘">
+                                <button>
+                                    <img class="edit-icon" src="/images/EditIcon.png" alt="편집 아이콘">
+                                </button>
+
                             </div>
                             <div class="middle-box-right-bottom-bottom">
                                 <textarea class="description" placeholder="소개글을 입력해주세요." readonly></textarea>
