--- a/html/home.html
+++ b/html/home.html
@@ -42,9 +42,15 @@
     <main>
         <div class="main-container">
             <div class="main-box">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="top-box">
+                    <div class="home-text">홈</div>
+                </div>
+                <div class="bottom-box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
             </div>
         </div>
     </main>
