feat: 홈 화면 top, bottom 나누기

--- a/html/home.html
+++ b/html/home.html
@@ -46,9 +46,9 @@
                     <div class="home-text">홈</div>
                 </div>
                 <div class="bottom-box">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="home-box"></div>
+                    <div class="home-box"></div>
+                    <div class="home-box"></div>
                 </div>
 
             </div>
