feat: 홈 화면 로고 버튼 기능 추가

--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,10 @@
     <aside>
         <div class="side-container">
             <div class="top-side-container">
-                <img class="logo-img" src="../images/Logo.png" alt="Logo">
+                <a href="">
+                    <img class="logo-img" src="../images/Logo.png" alt="Logo">
+                </a>
+
                 <div class="button-container">
                     <a href="./home.html" class="side-button act">
                         <img class="icon" src="../images/HomeIcon.png" alt="홈 아이콘">
