--- a/html/home.html
+++ b/html/home.html
@@ -22,7 +22,7 @@
                         <img class="icon" src="../images/HomeIcon.png" alt="홈 아이콘">
                         <span>홈</span>
                     </a>
-                    <a href="./mission.html" class="side-button noact">
+                    <a href="./ranking.html" class="side-button noact">
                         <img class="icon" src="../images/RankIcon.png" alt="홈 아이콘">
                         <span>순위표</span>
                     </a>
