--- a/html/ranking.html
+++ b/html/ranking.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitcha</title>
-    <link rel="stylesheet" href="../css/mission.css">
+    <link rel="stylesheet" href="../css/ranking.css">
     <link rel="icon" type="images/png" href="../images/Logo.png">
 </head>
 
