feat:홈 화면 코드 수정

--- a/html/home.html
+++ b/html/home.html
@@ -52,7 +52,7 @@
                     <div class="mission-box"></div>
                     <div class="home-box"></div>
                     <div class="home-box"></div>
-                </div>
+                </div>dw
 
             </div>
         </div>
