feat: 홈 화면 미션 칸 임시 완성

--- a/html/home.html
+++ b/html/home.html
@@ -49,7 +49,7 @@
                     <div class="home-text">홈</div>
                 </div>
                 <div class="bottom-box">
-                    <div class="mission-box"></div>
+                    <div class="mission-box">오늘의 미션</div>
                     <div class="home-box"></div>
                     <div class="home-box"></div>
                 </div>
